<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_num1_string">Dame el primer valor</string>
    <string name="txt_num2_string">Dame el segundo valor</string>
    <string name="rb_sumar_String">Sumar</string>
    <string name="rb_restar_String">Restar</string>
    <string name="bt_String">Calcular</string>
    <string name="tv_resultado_String">Resultado</string>
</resources>